# thawra

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
thawra/: __init__.py  action.py  battle.py  hero.py
thawra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
thawra/tests/: test_actions.py  test_battle.py  test_hero.py
