[metadata]
name = thawra
version = 0.0.1
author = Joe H. Rahme
author-email = joehakimrahme@gmail.com
summary = A game about making games
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Game
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    thawra

[entry_points]
thawra =
    battle = thawra.battle
    action = tahwra.action
    hero = thawra.hero

